SV+H color picker should be named VS+H #44093

Closed
opened 2015-03-23 00:42:11 +01:00 by WK Bong · 5 comments

System Information
ALL

Blender Version
Broken: ALL

Short description of error
I teach this to my students and they find it weird.
Following the naming convention for the other color pickers, HV+S and HS+V.
Which in the order ofHorizon, Verticle + Bottom bar.
SV+H should be properly named as VS+H.

Note: Tooltip also has the wrong naming order.

Exact steps for others to reproduce the error
COLORPICKERNAME.jpg

**System Information** ALL **Blender Version** Broken: ALL **Short description of error** I teach this to my students and they find it weird. Following the naming convention for the other color pickers, **HV+S** and **HS+V**. Which in the order of*Horizon*, *Verticle* + *Bottom bar*. **SV+H** should be properly named as **VS+H**. Note: Tooltip also has the wrong naming order. **Exact steps for others to reproduce the error** ![COLORPICKERNAME.jpg](https://archive.blender.org/developer/F154180/COLORPICKERNAME.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @WeeKwongBong

Added subscriber: @WeeKwongBong

This issue was referenced by e8b6d86f95

This issue was referenced by e8b6d86f9514b86daefe6ee0182c57d794b603f9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e8b6d86f95.

Closed by commit e8b6d86f95.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44093
No description provided.