Fix T44093: Color picker SV+H order wrong.

Based on HSV ordering, SV+H had S<>V swapped.